APIs/googleapis.com/trafficdirector/v3/python-client/docs/PerXdsConfig.md
# PerXdsConfig

Detailed config (per xDS) with status. [#next-free-field: 8]

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**client_status** | **str** | Client config status is populated by xDS clients. Will not be present if the CSDS server is an xDS server. No matter what the client config status is, xDS clients should always dump the most recent accepted xDS config. .. attention:: This field is deprecated. Use :ref:&#x60;ClientResourceStatus &#x60; for per-resource config status instead. | [optional] 
**cluster_config** | [**ClustersConfigDump**](ClustersConfigDump.md) |  | [optional] 
**endpoint_config** | [**EndpointsConfigDump**](EndpointsConfigDump.md) |  | [optional] 
**listener_config** | [**ListenersConfigDump**](ListenersConfigDump.md) |  | [optional] 
**route_config** | [**RoutesConfigDump**](RoutesConfigDump.md) |  | [optional] 
**scoped_route_config** | [**ScopedRoutesConfigDump**](ScopedRoutesConfigDump.md) |  | [optional] 
**status** | **str** | Config status generated by management servers. Will not be present if the CSDS server is an xDS client. | [optional] 

## Example

```python
from openapi_client.models.per_xds_config import PerXdsConfig

# TODO update the JSON string below
json = "{}"
# create an instance of PerXdsConfig from a JSON string
per_xds_config_instance = PerXdsConfig.from_json(json)
# print the JSON string representation of the object
print(PerXdsConfig.to_json())

# convert the object into a dict
per_xds_config_dict = per_xds_config_instance.to_dict()
# create an instance of PerXdsConfig from a dict
per_xds_config_from_dict = PerXdsConfig.from_dict(per_xds_config_dict)
```
[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


